--- a/housing.ipynb
+++ b/housing.ipynb
@@ -34,7 +34,8 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lDZRs3q1wmIW",
-        "outputId": "f6c20d92-9a3b-4d1f-e889-d62769e2f247"
+        "outputId": "f6c20d92-9a3b-4d1f-e889-d62769e2f247",
+        "collapsed": true
       },
       "outputs": [
         {
@@ -69,7 +70,8 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yDY-6Z1rxY19",
-        "outputId": "2e308d8d-88f4-45a6-ad7c-8fe9a73eb637"
+        "outputId": "2e308d8d-88f4-45a6-ad7c-8fe9a73eb637",
+        "collapsed": true
       },
       "execution_count": null,
       "outputs": [
@@ -361,6 +363,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "collapsed": true,
         "outputId": "1e5e1b22-2cc2-4604-947f-c6abfef92ad0"
       },
       "execution_count": 52,
